--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,3 +15,14 @@ h1 {
   margin-left: 6rem;
   line-height: 1;
 }
+
+@media (min-width: 1350px) {
+  h1 {
+    font-size: 4.5rem;
+    margin-left: 7rem;
+    line-height: 2.5;
+  }
+  .line-break {
+    display: none;
+  }
+}
