--- a/src/components/SolarResult/SolarResult.css
+++ b/src/components/SolarResult/SolarResult.css
@@ -1,13 +1,49 @@
-.calculated-results {
+.dashboard {
+  margin: -50px auto 1rem auto;
+  background: white;
+  border-radius: 40px;
+  padding: 0rem 3rem;
   display: flex;
-  gap: 24px;
-  align-items: flex-start;
+  flex-direction: column;
 }
 
-.rating {
-  flex: 0 0 60%;
+.first-row {
+  margin-top: 6rem;
+  padding-bottom: 3rem;
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  gap: 1rem;
 }
 
-.result-benchmarks {
-  flex: 0 0 40%;
+.second-row {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  gap: 1rem;
+}
+
+.card {
+  border-radius: 16px;
+  padding: 2.5rem;
+}
+
+.card-dark {
+  background: #1236d3;
+  color: white;
+}
+
+.card-light {
+  background: #eef8ff;
+}
+
+.card-map {
+  padding: 0;
+  overflow: hidden;
+}
+
+.card p {
+  margin: 0;
+}
+
+.card h3 {
+  margin: 0.75rem 0 2rem;
 }
