--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
 html,
-body {
+body,
+#root {
+  height: 100%;
   margin: 0;
-  padding: 0;
-  width: 100%;
+  overflow: hidden;
+}
+
+.app-background {
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
 }
