--- a/src/components/SolarResult/SolarResult.css
+++ b/src/components/SolarResult/SolarResult.css
@@ -1,38 +1,61 @@
 .dashboard {
-  margin: -50px auto 2rem auto;
-  background: white;
-  border-radius: 40px;
-  padding: 0rem 3rem;
+  flex: 1;
+  padding: 24px;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 2fr 1.2fr;
+  grid-template-rows: auto 1fr;
+  gap: 96px;
+  overflow: hidden;
+}
+
+.grid-bottom-left,
+.grid-right {
+  min-height: 0;
+}
+
+.card {
+  min-height: 0;
+  overflow: hidden;
+}
+
+.grid-top-left {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.grid-bottom-left {
+  grid-column: 1;
+  grid-row: 2;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+  gap: 24px;
+}
+
+.grid-right {
+  grid-column: 2;
+  grid-row: 1 / span 2;
   display: flex;
-  flex-direction: column;
 }
 
-.first-row {
-  margin-top: 6rem;
-  padding-bottom: 3rem;
-  display: grid;
-  grid-template-columns: 3fr 2fr;
-  gap: 2rem;
+.result {
+  color: white;
 }
 
-.second-row {
-  display: grid;
-  grid-template-columns: 2fr 2fr;
-  gap: 2rem;
+h1 {
+  margin: 3rem 0 0;
+}
+
+h3 {
+  margin: 1rem 0 0 0;
 }
 
 .card {
   border-radius: 16px;
   padding: 2.5rem;
-}
-
-.card-dark {
-  background: #1236d3;
-  color: white;
-}
-
-.card-light {
-  background: #eef8ff;
+  background: white;
 }
 
 .card-map {
@@ -46,4 +69,19 @@
 
 .card h3 {
   margin: 0.75rem 0 2rem;
+}
+
+.link {
+  text-decoration: none;
+  font-size: 1rem;
+  color: black;
+  background: white;
+  padding: 0.5rem 1.75rem;
+  border-radius: 50px;
+}
+
+.link:hover {
+  background-color: #0f38ce;
+  color: white;
+  cursor: pointer;
 }
