--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,12 +1,36 @@
-form {
-  background: white;
-  border-radius: 40px;
-  width: 70%;
-  max-width: 1000px;
-  height: 80vh;
-  padding: 3rem 4rem;
-  overflow-y: auto;
+.container {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  padding: 2rem; /* space around entire container */
   box-sizing: border-box;
+}
+
+.title {
+  flex: 0 0 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  color: white;
+}
+
+.form-wrapper {
+  flex: 0 0 60%;
+  background: white;
+  border-radius: 20px;
+  overflow-y: auto;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 2rem;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 2rem;
+  overflow-y: auto;
 }
 
 h1 {
@@ -21,15 +45,6 @@ h3 {
   line-height: 1.1;
 }
 
-h3 .highlight {
-  color: #0f38ce;
-  font-weight: 500; /* optional, make it bolder */
-}
-
-label {
-  font-size: 1.25rem;
-}
-
 input {
   background-color: #e3f4ff;
   border: none;
@@ -39,15 +54,20 @@ input {
 }
 
 label {
+  font-size: 1rem;
   display: block;
-  margin-top: 1.5rem;
-  margin-bottom: 0.75rem;
+  margin-top: 1.75rem;
+}
+
+p {
+  font-size: 0.7rem;
+  margin-bottom: 0rem;
 }
 
 .options-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .option {
@@ -80,6 +100,9 @@ label {
   filter: brightness(0) invert(1);
 }
 .options-text {
-  font-size: 1.1rem;
-  margin-top: 0.5rem;
+  font-size: 0.8rem;
+}
+
+input {
+  margin-top: 1.25rem;
 }
