--- a/src/components/SolarResult/SolarResult.css
+++ b/src/components/SolarResult/SolarResult.css
@@ -42,10 +42,11 @@
 
 .result {
   color: white;
+  margin-top: 2.5rem;
 }
 
 h1 {
-  margin: 3rem 0 0;
+  margin: 0.5rem 0 0;
 }
 
 h3 {
@@ -73,10 +74,10 @@ h3 {
 
 .link {
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: black;
   background: white;
-  padding: 0.5rem 1.75rem;
+  padding: 0.5rem 1.6rem;
   border-radius: 50px;
 }
 
