--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -2,12 +2,12 @@
   display: flex;
   height: 100vh;
   width: 100vw;
-  padding: 2rem; /* space around entire container */
+  padding: 1.5rem;
   box-sizing: border-box;
 }
 
 .title {
-  flex: 0 0 40%;
+  flex: 0 0 50%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -15,14 +15,19 @@
   color: white;
 }
 
-.form-wrapper {
-  flex: 0 0 60%;
-  background: white;
-  border-radius: 20px;
-  overflow-y: auto;
-  height: 100%;
-  box-sizing: border-box;
-  padding: 2rem;
+.title h1 {
+  font-size: 3.5rem;
+  font-weight: 300;
+  line-height: 1;
+  padding-left: 1rem;
+  margin: 0.75rem 0 0 0;
+}
+
+.title h3 {
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 1.15;
+  padding-left: 1rem;
 }
 
 form {
@@ -33,16 +38,19 @@ form {
   overflow-y: auto;
 }
 
-h1 {
-  font-size: 3.5rem;
-  font-weight: 300;
-  line-height: 1.1;
+.form-wrapper {
+  flex: 0 0 50%;
+  background: white;
+  border-radius: 20px;
+  overflow-y: auto;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 0.75rem;
 }
 
-h3 {
-  font-size: 1.5rem;
-  font-weight: 300;
-  line-height: 1.1;
+.form-wrapper p {
+  font-size: 0.7rem;
+  margin-bottom: 0rem;
 }
 
 input {
@@ -51,17 +59,13 @@ input {
   border-radius: 10px;
   padding: 15px 20px;
   outline: none;
+  margin-top: 1.25rem;
 }
 
 label {
   font-size: 1rem;
   display: block;
   margin-top: 1.75rem;
-}
-
-.form-wrapper p {
-  font-size: 0.7rem;
-  margin-bottom: 0rem;
 }
 
 .options-grid {
@@ -87,8 +91,8 @@ label {
 }
 
 .options-grid img {
-  width: 125px;
-  height: 125px;
+  width: 115px;
+  height: 115px;
 }
 
 .option.selected {
@@ -103,6 +107,11 @@ label {
   font-size: 0.8rem;
 }
 
-input {
-  margin-top: 1.25rem;
+.submit {
+  margin-top: 2rem;
+  color: white;
+  background: #0f38ce;
+  padding: 0.5rem 1.6rem;
+  border: none;
+  border-radius: 50px;
 }
