--- a/src/components/SolarResult/SolarResult.css
+++ b/src/components/SolarResult/SolarResult.css
@@ -45,17 +45,28 @@
   margin-top: 2.5rem;
 }
 
-h1 {
+.result h1 {
+  font-size: 3.5rem;
+  font-weight: 300;
+  line-height: 1;
   margin: 0.5rem 0 0;
 }
 
-h3 {
-  margin: 1rem 0 0 0;
+.result h3 {
+  font-size: 1.7rem;
+  font-weight: 400;
+  line-height: 1.15;
+  margin: 0.5rem 0 0 0;
+}
+
+.card h4 {
+  margin: 0;
+  font-weight: 500;
 }
 
 .card {
   border-radius: 16px;
-  padding: 2.5rem;
+  padding: 1.25rem 1.5rem;
   background: white;
 }
 
@@ -65,7 +76,12 @@ h3 {
 }
 
 .card p {
-  margin: 0;
+  margin: 0.25rem 0 0 0;
+  font-size: 0.8rem;
+}
+
+td {
+  font-size: 0.8rem;
 }
 
 .card h3 {
