--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -31,7 +31,7 @@
 }
 
 form {
-  width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   padding: 1rem 2rem;
@@ -91,8 +91,9 @@ label {
 }
 
 .options-grid img {
-  width: 115px;
-  height: 115px;
+  width: 100%;
+  max-width: 110px;
+  height: auto;
 }
 
 .option.selected {
@@ -114,4 +115,11 @@ label {
   padding: 0.5rem 1.6rem;
   border: none;
   border-radius: 50px;
+  align-self: flex-start;
+}
+
+.result-benchmarks table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 0.5rem 0 0 0;
 }
